--- a/pages/Qteam.html
+++ b/pages/Qteam.html
@@ -39,8 +39,11 @@
 			<span class = 'BlockText'>Никита Ноздрин - Дизайнер, Модератор группы</span> <br>
 			<img src="../img/Qteam/nek.jpg" class = 'BlockIMG'> <br>
 
-			<span class = 'BlockText'>Юлия Ильина - Модератор</span> <br>
+			<span class = 'BlockText'>Юлия Ильина - Модератор группы</span> <br>
 			<img src="../img/Qteam/julia.jpg" class = 'BlockIMG'> <br>
+
+			<span class = 'BlockText'>Вероника Осипова - Модератор группы</span> <br>
+			<img src="../img/Qteam/veron.jpg" class = 'BlockIMG'> <br>
 
 			<span class = 'BlockText'>Саня Куренков - Талисман группы</span> <br>
 			<img src="../img/Qteam/sanya.jpg" class = 'BlockIMG'> <br>
