--- a/index.html
+++ b/index.html
@@ -17,61 +17,61 @@
 	</head>
 
 	<body>
-		<div class = 'white'>
-			<a href = '#' class = 'link'>https://qworld.com</a>
-		</div>
-		<div class = 'bg'>
-				<div class = 'descriptionMain'>
-					<div class = 'text'>
-						<strong class = 'textWhatIs'>ЧТО ТАКОЕ</strong><strong class = 'textQ'> Q?</strong><br>
-						<strong class = 'textWhyQ'>Q - ЛУЧШАЯ ГРУППА В МИРЕ!</strong>
-					</div>
-				</div>
-		</div>
-		<div class = 'red'>
-			<h1 class = 'name'>Q-WORLD</h1>
-		</div>
-		<div align = 'center'>
-			<div>
-				<p class = 'empty'></p>
-				<div class = 'blocktype1'>
-					<img src = 'img/scr1.png' class = 'imgRIGHT' align="right">
-					<strong class = 'desc1LEFT'>БЛОГ ГРУППЫ Q</strong> <br>
-					<strong class = 'desc2LEFT'>ЧИТАТЬ ЛУЧШИЙ БЛОГ ОТ ЛУЧШЕЙ ГРУППЫ В МИРЕ Q</strong>
-					<div class="buttonDec">
-						<a href="https://vk.com/public192658281" class = 'button'>Читать</a>
-					</div>
-					
-				</div>
+			<div class = 'white'>
+				<a href = '#' class = 'link'>https://qworld.com</a>
 			</div>
+			<div class = 'bg'>
+					<div class = 'descriptionMain'>
+						<div class = 'text'>
+							<strong class = 'textWhatIs'>ЧТО ТАКОЕ</strong><strong class = 'textQ'> Q?</strong><br>
+							<strong class = 'textWhyQ'>Q - ЛУЧШАЯ ГРУППА В МИРЕ!</strong>
+						</div>
+					</div>
+			</div>
+			<div class = 'red'>
+				<a href = 'pages/info.html' class = 'name'>Q-WORLD</a>
+			</div>
+			<div align = 'center'>
+				<div>
+					<p class = 'empty'></p>
+					<div class = 'blocktype1'>
+						<img src = 'img/scr1.png' class = 'imgRIGHT' align="right">
+						<strong class = 'desc1LEFT'>БЛОГ ГРУППЫ Q</strong> <br>
+						<strong class = 'desc2LEFT'>ЧИТАТЬ ЛУЧШИЙ БЛОГ ОТ ЛУЧШЕЙ ГРУППЫ В МИРЕ Q</strong>
+						<div class="buttonDec">
+							<a href="https://vk.com/public192658281" class = 'button'>Читать</a>
+						</div>
+						
+					</div>
+				</div>
 
-			<div>
-				<div class = 'blocktype2'>
-					<img src = 'img/scr2.png' class = 'imgLEFT' align="left">
-					<strong class = 'desc1LEFT'>ГАЛЕРЕЯ ГРУППЫ Q</strong> <br>
-					<strong class = 'desc2LEFT'>СМОТРЕТЬ ЛУЧШИЕ ФОТКИ ЛУЧШЕЙ ГРУППЫ В МИРЕ Q</strong>
-					<div class="buttonDec">
-						<a href="pages/gallery.html" class = 'button'>Смотреть</a>
+				<div>
+					<div class = 'blocktype2'>
+						<img src = 'img/scr2.png' class = 'imgLEFT' align="left">
+						<strong class = 'desc1LEFT'>ГАЛЕРЕЯ ГРУППЫ Q</strong> <br>
+						<strong class = 'desc2LEFT'>СМОТРЕТЬ ЛУЧШИЕ ФОТКИ ЛУЧШЕЙ ГРУППЫ В МИРЕ Q</strong>
+						<div class="buttonDec">
+							<a href="pages/gallery.html" class = 'button'>Смотреть</a>
+						</div>
 					</div>
 				</div>
-			</div>
 
-			<div>
-				<div class = 'blocktype1'>
-					<img src = 'img/scr3.png' class = 'imgRIGHT' align="right">
-					<strong class = 'desc1LEFT'>КОМАНДА ГРУППЫ Q</strong> <br>
-					<strong class = 'desc2LEFT'>УЗНАТЬ КОМАНДУ ЛУЧШЕЙ ГРУППЫ В МИРЕ Q</strong>
-					<div class="buttonDec">
-						<a href="pages/Qteam.html" class = 'button'>Узнать</a>
+				<div>
+					<div class = 'blocktype1'>
+						<img src = 'img/scr3.png' class = 'imgRIGHT' align="right">
+						<strong class = 'desc1LEFT'>КОМАНДА ГРУППЫ Q</strong> <br>
+						<strong class = 'desc2LEFT'>УЗНАТЬ КОМАНДУ ЛУЧШЕЙ ГРУППЫ В МИРЕ Q</strong>
+						<div class="buttonDec">
+							<a href="pages/Qteam.html" class = 'button'>Узнать</a>
+						</div>
 					</div>
 				</div>
 			</div>
-		</div>
-		<div align = 'center'>
-			<span class = 'textJoin'>Присоединяйся к </span><span class = 'textQ'>Q!</span>
-		</div>
+			<div align = 'center' style = 'margin-left: 15%;width: 70%;text-align: center; margin-bottom:50px;'>
+				<span class = 'textJoin'>Присоединяйся к </span><span class = 'textQ'>Q!</span>
+			</div>
 		<footer align = 'center'>
-			<span style = 'font-weight: 800; font-size: 3vw; color: red;' >Q - WORLD</span>
+			<span style = 'font-weight: 800; font-size: 30px; color: red;' >Q - WORLD</span>
 		</footer>
 	</body>
 </html>
