--- a/pages/Qteam.html
+++ b/pages/Qteam.html
@@ -30,28 +30,28 @@
 		<!--CONTENT-->
 
 		<div class = 'block' align = 'center'>
-			<span class = 'BlockText'>Антон Коняхин - Создатель группы</span> <br>
+			<a href='https://vk.com/antoshka258' class = 'BlockText'>Антон Коняхин - Создатель группы</a> <br>
 			<img src="../img/Qteam/anton.jpg" class = 'BlockIMG'> <br>
 
-			<span class = 'BlockText'>Артем Образумов - Программист, Создатель сайта</span> <br>
+			<a href='https://vk.com/obrazumchek' class = 'BlockText'>Артем Образумов - Программист, Создатель сайта</a> <br>
 			<img src="../img/Qteam/artem.jpg" class = 'BlockIMG'> <br>
 
-			<span class = 'BlockText'>Никита Ноздрин - Дизайнер, Модератор группы</span> <br>
+			<a href='https://vk.com/id433937699' class = 'BlockText'>Никита Ноздрин - Дизайнер, Модератор группы</a> <br>
 			<img src="../img/Qteam/nek.jpg" class = 'BlockIMG'> <br>
 
-			<span class = 'BlockText'>Юлия Ильина - Модератор группы</span> <br>
+			<a href='https://vk.com/id474792301' class = 'BlockText'>Юлия Ильина - Модератор группы</a> <br>
 			<img src="../img/Qteam/julia.jpg" class = 'BlockIMG'> <br>
 
-			<span class = 'BlockText'>Вероника Осипова - Модератор группы</span> <br>
+			<a href='https://vk.com/id542085700' class = 'BlockText'>Вероника Осипова - Модератор группы</a> <br>
 			<img src="../img/Qteam/veron.jpg" class = 'BlockIMG'> <br>
 
-			<span class = 'BlockText'>Саня Куренков - Талисман группы</span> <br>
+			<a href='https://vk.com/id426834214' class = 'BlockText'>Саня Куренков - Талисман группы</a> <br>
 			<img src="../img/Qteam/sanya.jpg" class = 'BlockIMG'> <br>
 		</div>
 
 
 		<footer align = 'center'>
-			<span style = 'font-weight: 800; font-size: 3vw; color: red;' >Q - WORLD</span>
+			<span style = 'font-weight: 800; font-size: 30px; color: red;' >Q - WORLD</span>
 		</footer>
 
 	</body>
