--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -58,12 +58,12 @@
 			<img src="../img/gallery/scr9.jpg" class = 'BlockIMG'> <br>
 		</div>
 
-		<div style = 'margin-left: 15vw; width: 75%; text-align: center;'>
+		<div style = 'margin-left: 15vw; width: 75%; text-align: center; margin-bottom:50px;'>
 			<span class = 'FinBlockText'>Больше крутых фоток вы можете найти в лучшей группе мира Q!</span>
 		</div>
 
 		<footer align = 'center'>
-			<span style = 'font-weight: 800; font-size: 3vw; color: red;' >Q - WORLD</span>
+			<span style = 'font-weight: 800; font-size: 30px; color: red;' >Q - WORLD</span>
 		</footer>
 	</body>
 
