--- a/pages/info.html
+++ b/pages/info.html
@@ -32,6 +32,7 @@
 
 		<div class = 'block' align = 'center'>
 			<img class = 'logoIMG' src="../img/Logo.png"><br>
+			<a href="https://www.donationalerts.com/r/artem_obrazumov" style ='font-weight: 800; font-size: 6vw; color: green;'>Поддержать проект</a>
 			<div style="margin:50px;">
 				<span style = 'font-weight: 800; font-size: 6vw; color: #191919;'>ИНФОРМАЦИЯ</span> <br>
 			</div>
