--- a/pages/version.html
+++ b/pages/version.html
@@ -37,6 +37,9 @@
 
 				<span style = 'font-weight: 800; font-size: 4vw; color: red;'>V. 1.0.1 (Актуальная)</span><br><br>
 				<span class = 'updateText'>Обновления этой версии:<br>- Теперь при нажатии на любое имя/название в разделах<br>"Команда Группы Q" и "Галерея группы Q" вы можете перейти <br> на страницу выбранного человека/выбранной записи.</span> <br><br><br>
+				<span class = 'updateText'>- При нажатии на название сайта на главной странице вы можете <br> посмотреть информацию о сайте.</span> <br><br>
+				<span class = 'updateText'>- Обновление списка команды Q.</span> <br><br>
+				<span class = 'updateText'>- Мелкие изменения и исправления в верстке сайта.</span> <br><br>
 
 				<span style = 'font-weight: 800; font-size: 4vw; color: red;'>V. 1.0.0</span><br><br>
 				<span class = 'updateText'>Обновления этой версии:<br>Релиз сайта. Первая версия.</span> <br><br>
